<resources>
    <string name="app_name">Github User</string>
    <string name="name">Name</string>
    <string name="user_name">Username</string>
    <string name="id">ID</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="profile_image">profile_image</string>
    <string name="splash_github">splash_github</string>

    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>

    <string name="search_hint">Search username Github</string>

    <string name="followers">"Followers : %d"</string>
    <string name="following">"Following : %d"</string>
    <string name="repositories">"Public Repo : %d"</string>

    <string name="no_location">No Location</string>
    <string name="no_company">No Company</string>
    <string name="no_followers">This account has no followers</string>
    <string name="no_favorite">No user favorite</string>

    <string name="menu_favorite">Menu Favorite</string>
    <string name="menu_dark">Menu Dark</string>
    <string name="menu_delete">Menu Delete</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="added">Akun ini telah ditambahkan ke Favorit</string>
    <string name="deleted">Akun ini telah dihapus dari Favorit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>