<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_item_photo_follower"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/profile_image"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_username_follower"
            android:layout_width="239dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo_follower"
            card_view:layout_constraintTop_toTopOf="@+id/img_item_photo_follower" />

        <TextView
            android:id="@+id/tv_item_id_follower"
            android:layout_width="104dp"
            android:layout_height="19dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/img_item_photo_follower"
            android:gravity="center_vertical"
            android:textSize="11sp"
            android:textStyle="normal"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo_follower"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_username_follower"
            tools:text="@string/id" />

        <TextView
            android:id="@+id/tv_item_type_follower"
            android:layout_width="121dp"
            android:layout_height="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/type"
            android:textSize="11sp"
            android:textStyle="normal"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.106"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo_follower"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_id_follower" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>