<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/profile_image" />

        <TextView
            android:id="@+id/tv_item_username_user"
            android:layout_width="118dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_item_photo" />

        <TextView
            android:id="@+id/tv_item_id_user"
            android:layout_width="181dp"
            android:layout_height="15dp"
            android:layout_marginBottom="20dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:textSize="13sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_username_user"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_username_user"
            card_view:layout_constraintVertical_bias="0.511"
            tools:text="@string/id" />

        <TextView
            android:id="@+id/tv_item_type_user"
            android:layout_width="246dp"
            android:layout_height="17dp"
            android:text="@string/type"
            android:textSize="11sp"
            android:textStyle="normal"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_id_user"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_id_user"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_id_user"
            card_view:layout_constraintVertical_bias="0.636" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>