<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:layout_marginBottom="10dp"
                app:layout_collapseMode="parallax">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/data_avatar"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/profile_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.086"
                    app:shapeAppearanceOverlay="@style/RoundedImageView"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/data_name"
                    android:layout_width="300dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="20dp"
                    style = "@style/TextContent.Title"
                    android:textColor="@color/white_primary"
                    app:layout_constraintEnd_toEndOf="@+id/data_avatar"
                    app:layout_constraintStart_toStartOf="@+id/data_avatar"
                    app:layout_constraintTop_toBottomOf="@+id/data_avatar" />

                <ProgressBar
                    android:id="@+id/progBar_data_name"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:indeterminate="true"
                    android:indeterminateBehavior="cycle"
                    android:indeterminateDuration="300"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    app:layout_constraintStart_toStartOf="@+id/data_name"
                    app:layout_constraintEnd_toEndOf="@+id/data_name"
                    app:layout_constraintTop_toTopOf="@+id/data_name"
                    app:layout_constraintBottom_toBottomOf="@+id/data_name" />

                <TextView
                    android:id="@+id/data_username"
                    android:layout_width="200dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="8dp"
                    style="@style/TextContent.Subtitle"
                    android:textColor="@color/white_primary"
                    app:layout_constraintEnd_toEndOf="@+id/data_name"
                    app:layout_constraintStart_toStartOf="@+id/data_name"
                    app:layout_constraintTop_toBottomOf="@+id/data_name" />

                <ProgressBar
                    android:id="@+id/progBar_data_username"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:indeterminate="true"
                    android:indeterminateBehavior="cycle"
                    android:indeterminateDuration="300"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    app:layout_constraintStart_toStartOf="@+id/data_username"
                    app:layout_constraintEnd_toEndOf="@+id/data_username"
                    app:layout_constraintTop_toTopOf="@+id/data_username"
                    app:layout_constraintBottom_toBottomOf="@+id/data_username" />

                <TextView
                    android:id="@+id/data_followers"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:textColor="@color/white_primary"
                    style="@style/TextContent.Subtitle"
                    app:layout_constraintEnd_toStartOf="@+id/data_following"
                    app:layout_constraintTop_toBottomOf="@+id/data_username" />

                <ProgressBar
                    android:id="@+id/progBar_data_followers"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:indeterminate="true"
                    android:indeterminateBehavior="cycle"
                    android:indeterminateDuration="300"
                    app:layout_constraintBottom_toBottomOf="@+id/data_followers"
                    app:layout_constraintEnd_toEndOf="@+id/data_followers"
                    app:layout_constraintStart_toStartOf="@+id/data_followers"
                    app:layout_constraintTop_toTopOf="@+id/data_followers" />

                <TextView
                    android:id="@+id/data_following"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white_primary"
                    style="@style/TextContent.Subtitle"
                    app:layout_constraintEnd_toEndOf="@+id/data_username"
                    app:layout_constraintStart_toStartOf="@+id/data_username"
                    app:layout_constraintTop_toBottomOf="@+id/data_username" />

                <ProgressBar
                    android:id="@+id/progBar_data_following"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:indeterminate="true"
                    android:indeterminateBehavior="cycle"
                    android:indeterminateDuration="300"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    app:layout_constraintStart_toStartOf="@+id/data_following"
                    app:layout_constraintEnd_toEndOf="@+id/data_following"
                    app:layout_constraintTop_toTopOf="@+id/data_following"
                    app:layout_constraintBottom_toBottomOf="@+id/data_following" />

                <TextView
                    android:id="@+id/data_repository"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white_primary"
                    style="@style/TextContent.Subtitle"
                    app:layout_constraintStart_toEndOf="@+id/data_following"
                    app:layout_constraintTop_toBottomOf="@+id/data_username" />

                <ProgressBar
                    android:id="@+id/progBar_data_repository"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:indeterminate="true"
                    android:indeterminateBehavior="cycle"
                    android:indeterminateDuration="300"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    app:layout_constraintStart_toStartOf="@+id/data_repository"
                    app:layout_constraintEnd_toEndOf="@+id/data_repository"
                    app:layout_constraintTop_toTopOf="@+id/data_repository"
                    app:layout_constraintBottom_toBottomOf="@+id/data_repository" />

                <TextView
                    android:id="@+id/data_company"
                    style="@style/TextContent.Subtitle"
                    android:layout_width="300dp"
                    android:layout_height="21dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white_primary"
                    app:layout_constraintEnd_toEndOf="@+id/data_repository"
                    app:layout_constraintStart_toStartOf="@+id/data_followers"
                    app:layout_constraintTop_toBottomOf="@+id/data_following" />

                <ProgressBar
                    android:id="@+id/progBar_data_company"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:indeterminate="true"
                    android:indeterminateBehavior="cycle"
                    android:indeterminateDuration="300"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    app:layout_constraintStart_toStartOf="@+id/data_company"
                    app:layout_constraintEnd_toEndOf="@+id/data_company"
                    app:layout_constraintTop_toTopOf="@+id/data_company"
                    app:layout_constraintBottom_toBottomOf="@+id/data_company" />

                <TextView
                    android:id="@+id/data_location"
                    style="@style/TextContent.Subtitle"
                    android:layout_width="250dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white_primary"
                    app:layout_constraintEnd_toEndOf="@+id/data_company"
                    app:layout_constraintHorizontal_bias="0.552"
                    app:layout_constraintStart_toStartOf="@+id/data_company"
                    app:layout_constraintTop_toBottomOf="@+id/data_company" />

                <ProgressBar
                    android:id="@+id/progBar_data_location"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:indeterminate="true"
                    android:indeterminateBehavior="cycle"
                    android:indeterminateDuration="300"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    app:layout_constraintStart_toStartOf="@+id/data_location"
                    app:layout_constraintEnd_toEndOf="@+id/data_location"
                    app:layout_constraintTop_toTopOf="@+id/data_location"
                    app:layout_constraintBottom_toBottomOf="@+id/data_location" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    style="@style/WrapContent"
                    android:orientation="horizontal" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_loading_bar_user"
                    style="@style/WrapContent"
                    app:constraint_referenced_ids="progBar_data_name,progBar_data_username,progBar_data_company,progBar_data_followers,progBar_data_following,progBar_data_location,progBar_data_repository" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    style="@style/WrapContent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:paddingBottom="4dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_following_followers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/view_pager_following_followers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabTextColor="?android:textColorPrimary" >

            <com.google.android.material.tabs.TabItem
                style="@style/WrapContent"
                android:layout_gravity="center"
                android:text="@string/tab_following" />

            <com.google.android.material.tabs.TabItem
                style="@style/WrapContent"
                android:layout_gravity="center"
                android:text="@string/tab_followers" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_following_followers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:fitsSystemWindows="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs_following_followers"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            style="@style/WrapContent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_tab_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            style="@style/TextContent.Title"
            android:text=""
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tabs_following_followers"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>

        <TextView
            android:id="@+id/tv_tab_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            style="@style/TextContent.Title"
            android:text=""
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tabs_following_followers"
            app:layout_constraintEnd_toEndOf="@+id/tabs_following_followers" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="182dp"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchor="@id/view_pager_following_followers"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_favorite_white_24"
        app:backgroundTint="@color/black_primary"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="129dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>